# forge-recover

./: .gitignore  README.md
dual_recovery/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
dual_recovery/configs/: default_experiment.json  dual_arm_experiment.json
dual_recovery/docs/: architecture.md  deployment_readiness.md  dual_arm_research_protocol.md  experiment_protocol.md  llm_recovery_protocol.md  research_contributions.md  thesis_execution_plan.md
dual_recovery/robots/: cruzr_s2_v1.urdf
dual_recovery/scripts/: check_deployment_readiness.py  collect_demo.py  dual_arm_transport_demo.py  export_diagnosis_dataset.py  generate_research_manifest.py  generate_workpiece_segmentation_dataset.py  physical_grasp_demo.py  run_batch_experiments.py  run_cruzr_diagnosis_node.py  run_dual_arm_experiments.py  train_recovery_experience.py
dual_recovery/tests/: test_adapters.py  test_belief_update.py  test_cooperative_task_graph.py  test_dataset.py  test_deployment_readiness.py  test_diagnosis.py  test_domain_randomization.py  test_dual_arm_coordinator.py  test_dual_arm_diagnosis.py  test_dual_arm_execution.py  test_dual_arm_faults.py  test_dual_arm_metrics.py  test_dual_arm_supervisor.py  test_dynamic_gripper_xml.py  test_execution_backend.py  test_experience_protocol.py  test_faults.py  test_instance_segmentation.py  test_llm_adapter.py  test_metrics.py  test_operation_monitor.py  test_paper_protocol.py  test_planning.py  test_recovery.py  test_recovery_aware_cost.py  test_recovery_experience_graph.py  test_research_phase.py  test_supervisor.py  (+2 more)
(+607 files in other folders)
